log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  namespace: exercises
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-reader-container
          image: rewrittenroutingacr.azurecr.io/log-reader

          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/files
              readOnly: true
          ports:
            - containerPort: 3000

      volumes:
        - name: config-volume
          configMap:
            name: log-output-configmap

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-generator-deployment
  namespace: exercises
  labels:
    app: log-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-generator
  template:
    metadata:
      labels:
        app: log-generator
    spec:
      containers:
        - name: log-generator-container
          image: rewrittenroutingacr.azurecr.io/log-generator

          ports:
            - containerPort: 3000
