log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-generator-svc
spec:
  type: ClusterIP
  selector:
    app: log-generator
  ports:
  - port: 80
    targetPort: 3000
